# polyodds

./: .gitignore  README.md  notify_cron.py  pyproject.toml  watchlist.json
polyodds/: __init__.py  cli.py  client.py  watch.py
polyodds.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_client.py  test_watch.py
